--- a/yelp.html
+++ b/yelp.html
@@ -37,7 +37,7 @@
                 url: "https://api.yelp.com/v3/businesses/search",
                 type: "GET",
                 headers: {
-                    "Authorization": "Bearer <your_api_key>"
+                    "Authorization": "Bearer -fkw3L9Bm3smMILDFqdwIbCXdTrz16MeyDHn6KauqTBeSIG1bujpZOK_0OIcMQ6zMl9p-E_uzpJOKmB_Od2jCXQPJQhO9u93L2KCNtC5Pjn2N_K9SWdqYKGeTL4XZHYx"
                 },
                 data: formData
             });
